<resources>
    <string name="app_name">Burpple</string>
    <string name="action_settings">Settings</string>

    <string name="title_burpple"><b>burpple</b></string>
    <string name="title_highlight"><b>A Tasty Walk In A Park</b></string>
    <string name="sub_title_highlight"><i>Savourworld puts 20 restaurants together \n
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
        on the science park map</i></string>

    <string name="see_more">See More</string>

    <string name="new_and_trending">New &amp; Trending</string>

    <string name="newly_opened"><b>Newely Opened</b></string>
    <string name="trending_venues"><b>Trending Venues</b></string>

    <string name="promotion_shop"><b>Hledan</b></string>

    <string name="sushi_kimura">Sushi Kimura</string>
    <string name="misato">Misato</string>
    <string name="nesuto">Nesuto</string>


    <string name="search_view_hint">Japanese restuant</string>

    <string name="title_toolbar">Burpple</string>
    <string name="lbl_to_login" >Log In</string>
    <string name="lbl_to_signUp">Sign Up</string>

    <string name="lbl_login_form">Login form</string>
    <string name="btn_forgot_password">Forgot Password?</string>
    <string name="btn_remember_me">Remember me</string>
    <string name="btn_to_login">Login</string>
    <string name="btn_create_a_new_account">Create a New Account</string>
    <string name="lbl_agree_terms_condition">I agree to Terms and Privacy Policy</string>
    <string name="lbl_log_out">Log Out</string>

</resources>
