<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_trending_venues"
    android:layout_width="150dp"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    app:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_trending_venues"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:paddingTop="20dp"
            android:text="@string/trending_venues"
            android:textColor="@color/primary"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/iv_sushi"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_below="@id/tv_trending_venues"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/img_dummy_sushi" />

        <TextView
            android:id="@+id/tv_sushi_kimura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_trending_venues"
            android:layout_marginTop="8dp"
            android:layout_toRightOf="@id/iv_sushi"
            android:padding="8dp"
            android:text="@string/sushi_kimura"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/iv_nesuto"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_below="@id/iv_sushi"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/img_dummy_nesuto" />

        <TextView
            android:id="@+id/tv_nesuto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_sushi_kimura"
            android:layout_marginTop="8dp"
            android:layout_toRightOf="@id/iv_nesuto"
            android:padding="8dp"
            android:text="@string/nesuto"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/iv_misato"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_below="@id/iv_nesuto"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/img_dummy_misato" />

        <TextView
            android:id="@+id/tv_misato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_nesuto"
            android:layout_marginTop="8dp"
            android:layout_toRightOf="@id/iv_misato"
            android:padding="8dp"
            android:text="@string/misato"
            android:textSize="12sp" />

        <View
            android:id="@+id/v_trending_venues_divider"
            style="@style/Divider"
            android:layout_below="@id/tv_misato"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/tv_explore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/v_trending_venues_divider"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="8dp"
            android:text="EXPLORE" />


    </RelativeLayout>

</android.support.v7.widget.CardView>