<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="256dp"
            app:contentScrim="@color/primary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <android.support.v4.view.ViewPager
                android:id="@+id/vp_backdrop_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_burpple"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/title_burpple"
                    android:textColor="@color/title_text_color"
                    android:textSize="24sp">

                </TextView>

            </RelativeLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="16dp"
                app:layout_collapseMode="pin">


                <android.support.v7.widget.SearchView
                    android:id="@+id/sv_search_food_place"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_burpple"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:background="@color/search_box_color">

                </android.support.v7.widget.SearchView>


            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_featured"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="16dp"
                    android:text="FEATURED"
                    android:textColor="@color/secondary_text" />

                <TextView
                    android:id="@+id/tv_promotions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_featured"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="4dp"
                    android:text="Promotions"
                    android:textColor="@color/primary_text"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_see_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/tv_featured"
                    android:layout_marginRight="12dp"
                    android:paddingTop="8dp"
                    android:text="@string/see_more"
                    android:textColor="@color/primary"
                    android:textSize="16sp" />



            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_food_promotions"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/tv_promotions"
                android:layout_marginTop="4dp">

            </android.support.v7.widget.RecyclerView>


            <TextView
                android:id="@+id/tv_latest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rv_food_promotions"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="16dp"
                android:text="LATEST"
                android:textColor="@color/secondary_text" />


            <TextView
                android:id="@+id/tv_burpple_guides"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_latest"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="4dp"
                android:text="Burpple Guides"
                android:textColor="@color/primary_text"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_see_more_guides"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/tv_latest"
                android:layout_marginRight="12dp"
                android:paddingTop="8dp"
                android:text="@string/see_more"
                android:textColor="@color/primary"
                android:textSize="16sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_food_guides"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/tv_see_more_guides"
                android:layout_marginTop="4dp">

            </android.support.v7.widget.RecyclerView>

            <TextView
                android:id="@+id/tv_latest_news"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rv_food_guides"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="16dp"
                android:text="LATEST"
                android:textColor="@color/secondary_text" />

            <TextView
                android:id="@+id/tv_new_and_trending"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_latest_news"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="4dp"
                android:text="@string/new_and_trending"
                android:textColor="@color/primary_text"
                android:textSize="20sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_new_and_trending"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_new_and_trending"
                android:layout_marginTop="4dp">

            </android.support.v7.widget.RecyclerView>


        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>
